infrastructure/keycloak/local/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-auth
spec:
  parentRefs:
    - name: gateway-dkroesen
      namespace: nginx-gateway
      sectionName: http-auth
  hostnames:
    - "auth.local.dkroesen.nl"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak-service
          port: 8080
